grammar/grammar.ts
///<reference path="../node.d.ts"/>
 import NodeType = require('../NodeType');module.exports = (function() {
  "use strict";

  /*
   * Generated by PEG.js 0.9.0.
   *
   * http://pegjs.org/
   */

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function peg$SyntaxError(message, expected, found, location) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.location = location;
    this.name     = "SyntaxError";

    throw new Error(this);
  }

  peg$subclass(peg$SyntaxError, Error);

  function peg$parse(input) {
    var options = arguments.length > 1 ? arguments[1] : {},
        parser  = this,

        peg$FAILED = {},

        peg$startRuleFunctions = { Program: peg$parseProgram },
        peg$startRuleFunction  = peg$parseProgram,

        peg$c0 = function(functionList, statList) {return new NodeType.ProgramNode(functionList, statList);},
        peg$c1 = function(type, ident, params, stats) {
            return new NodeType.FuncNode(type, ident, params ? params : [], stats);
          },
        peg$c2 = function(param, params) {
            return generateListFromRecursiveRule(param, params);
          },
        peg$c3 = function(param) {
            return generateSingletonListFromRule(param);
          },
        peg$c4 = function(type, ident) {
            return new NodeType.ParamNode(type, ident);
          },
        peg$c5 = function(stat, stats) {
              return generateListFromRecursiveRule(stat, stats);
            },
        peg$c6 = function(stat) {
              return generateSingletonListFromRule(stat);
          },
        peg$c7 = function() {
            return new NodeType.SkipNode();
          },
        peg$c8 = function(statList) {
            return new NodeType.BeginEndBlockNode(statList);
          },
        peg$c9 = function(dest) {
            return new NodeType.ReadNode(dest);
          },
        peg$c10 = function(expr) {
            return new NodeType.FreeNode(expr);
          },
        peg$c11 = function(expr) {
            return new NodeType.ExitNode(expr);
          },
        peg$c12 = function(returnExpr) { return new NodeType.ReturnNode(returnExpr); },
        peg$c13 = function(expr) {
            return new NodeType.PrintlnNode(expr); 
          },
        peg$c14 = function(expr) {
            return new NodeType.PrintNode(expr);
          },
        peg$c15 = function(predicate, trueStats, falseStats) {
                                  return new NodeType.IfNode(predicate, trueStats, falseStats)
          },
        peg$c16 = function(predicateExpr, loopBody) { return new NodeType.WhileNode(predicateExpr, loopBody); },
        peg$c17 = function(lhs, rhs) {
            return new NodeType.AssignNode(lhs,rhs);

          },
        peg$c18 = function(type, ident, rhs) {
            return new NodeType.DeclareNode(type, ident, rhs);
          },
        peg$c19 = function(expr) { return expr; },
        peg$c20 = function(typeName) { return new NodeType.BaseTypeNode(typeName);},
        peg$c21 = function(type, array) {
            return new NodeType.ArrayTypeNode(type, array.length);
          },
        peg$c22 = function(type1, type2) { return new NodeType.PairTypeNode(type1, type2); },
        peg$c23 = function(type) {
            return new NodeType.PairElemTypeNode(type);
          },
        peg$c24 = function(ident, exprList) {
            return new NodeType.CallNode(ident, exprList);
          },
        peg$c25 = function(fstExpr, sndExpr) {
                              return new NodeType.NewPairNode(fstExpr, sndExpr);
          },
        peg$c26 = function(exprList) { return new NodeType.ArrayLiterNode(exprList);},
        peg$c27 = function(expr, exprs) {
              return generateListFromRecursiveRule(expr, exprs);
            },
        peg$c28 = function(expr) {
              return generateSingletonListFromRule(expr);
            },
        peg$c29 = function(expr) {
            return new NodeType.PairElemFstNode(expr);
          },
        peg$c30 = function(expr) {return new NodeType.PairElemSndNode(expr);},
        peg$c31 = function(left, binOp, right) { 
            return new NodeType.BinOpExprNode(left,right, binOp);
          },
        peg$c32 = function(unOp, expr) { return new NodeType.UnOpNode(unOp, expr); },
        peg$c33 = "!",
        peg$c34 = { type: "literal", value: "!", description: "\"!\"" },
        peg$c35 = "-",
        peg$c36 = { type: "literal", value: "-", description: "\"-\"" },
        peg$c37 = "len",
        peg$c38 = { type: "literal", value: "len", description: "\"len\"" },
        peg$c39 = "ord",
        peg$c40 = { type: "literal", value: "ord", description: "\"ord\"" },
        peg$c41 = "chr",
        peg$c42 = { type: "literal", value: "chr", description: "\"chr\"" },
        peg$c43 = function(ident, exprList) {
            return new NodeType.ArrayElemNode(ident, exprList);
          },
        peg$c44 = function(expr, exprs) {
          return generateListFromRecursiveRule(expr, exprs);
         },
        peg$c45 = function(expr) {
          return generateSingletonListFromRule(expr);
         },
        peg$c46 = function(front, rest) {
            var ident = front + rest.join('')
            return new NodeType.IdentNode(ident);
          },
        peg$c47 = "_",
        peg$c48 = { type: "literal", value: "_", description: "\"_\"" },
        peg$c49 = /^[a-z]/,
        peg$c50 = { type: "class", value: "[a-z]", description: "[a-z]" },
        peg$c51 = /^[A-Z]/,
        peg$c52 = { type: "class", value: "[A-Z]", description: "[A-Z]" },
        peg$c53 = /^[0-9]/,
        peg$c54 = { type: "class", value: "[0-9]", description: "[0-9]" },
        peg$c55 = function() {
            return new NodeType.PairLiterNode();
          },
        peg$c56 = function(sign, digits) { 
            var num = parseInt((sign ? sign : '') + digits.join(''), 10);
            return new NodeType.IntLiterNode(num);
          },
        peg$c57 = "+",
        peg$c58 = { type: "literal", value: "+", description: "\"+\"" },
        peg$c59 = function() { return new NodeType.BoolLiterNode(true); },
        peg$c60 = function() { return new NodeType.BoolLiterNode(false); },
        peg$c61 = "'",
        peg$c62 = { type: "literal", value: "'", description: "\"'\"" },
        peg$c63 = function(ch) { return new NodeType.CharLiterNode(ch); },
        peg$c64 = "\"",
        peg$c65 = { type: "literal", value: "\"", description: "\"\\\"\"" },
        peg$c66 = function(str) {
          return new NodeType.StrLiterNode(str)
         },
        peg$c67 = "\\",
        peg$c68 = { type: "literal", value: "\\", description: "\"\\\\\"" },
        peg$c69 = /^[^'"]/,
        peg$c70 = { type: "class", value: "[^\\'\"]", description: "[^\\'\"]" },
        peg$c71 = "0",
        peg$c72 = { type: "literal", value: "0", description: "\"0\"" },
        peg$c73 = "b",
        peg$c74 = { type: "literal", value: "b", description: "\"b\"" },
        peg$c75 = "t",
        peg$c76 = { type: "literal", value: "t", description: "\"t\"" },
        peg$c77 = "n",
        peg$c78 = { type: "literal", value: "n", description: "\"n\"" },
        peg$c79 = "f",
        peg$c80 = { type: "literal", value: "f", description: "\"f\"" },
        peg$c81 = "r",
        peg$c82 = { type: "literal", value: "r", description: "\"r\"" },
        peg$c83 = function() { return null; },
        peg$c84 = { type: "other", description: "whitespace" },
        peg$c85 = "\t",
        peg$c86 = { type: "literal", value: "\t", description: "\"\\t\"" },
        peg$c87 = "\x0B",
        peg$c88 = { type: "literal", value: "\x0B", description: "\"\\x0B\"" },
        peg$c89 = "\f",
        peg$c90 = { type: "literal", value: "\f", description: "\"\\f\"" },
        peg$c91 = " ",
        peg$c92 = { type: "literal", value: " ", description: "\" \"" },
        peg$c93 = /^[\n\r\u2028\u2029]/,
        peg$c94 = { type: "class", value: "[\\n\\r\\u2028\\u2029]", description: "[\\n\\r\\u2028\\u2029]" },
        peg$c95 = { type: "other", description: "end of line" },
        peg$c96 = "\n",
        peg$c97 = { type: "literal", value: "\n", description: "\"\\n\"" },
        peg$c98 = "\r\n",
        peg$c99 = { type: "literal", value: "\r\n", description: "\"\\r\\n\"" },
        peg$c100 = "\r",
        peg$c101 = { type: "literal", value: "\r", description: "\"\\r\"" },
        peg$c102 = "\u2028",
        peg$c103 = { type: "literal", value: "\u2028", description: "\"\\u2028\"" },
        peg$c104 = "\u2029",
        peg$c105 = { type: "literal", value: "\u2029", description: "\"\\u2029\"" },
        peg$c106 = "#",
        peg$c107 = { type: "literal", value: "#", description: "\"#\"" },
        peg$c108 = { type: "any", description: "any character" },
        peg$c109 = "is",
        peg$c110 = { type: "literal", value: "is", description: "\"is\"" },
        peg$c111 = "return",
        peg$c112 = { type: "literal", value: "return", description: "\"return\"" },
        peg$c113 = "int",
        peg$c114 = { type: "literal", value: "int", description: "\"int\"" },
        peg$c115 = "bool",
        peg$c116 = { type: "literal", value: "bool", description: "\"bool\"" },
        peg$c117 = "char",
        peg$c118 = { type: "literal", value: "char", description: "\"char\"" },
        peg$c119 = "string",
        peg$c120 = { type: "literal", value: "string", description: "\"string\"" },
        peg$c121 = "call",
        peg$c122 = { type: "literal", value: "call", description: "\"call\"" },
        peg$c123 = "pair",
        peg$c124 = { type: "literal", value: "pair", description: "\"pair\"" },
        peg$c125 = "newpair",
        peg$c126 = { type: "literal", value: "newpair", description: "\"newpair\"" },
        peg$c127 = "fst",
        peg$c128 = { type: "literal", value: "fst", description: "\"fst\"" },
        peg$c129 = "snd",
        peg$c130 = { type: "literal", value: "snd", description: "\"snd\"" },
        peg$c131 = ",",
        peg$c132 = { type: "literal", value: ",", description: "\",\"" },
        peg$c133 = "*",
        peg$c134 = { type: "literal", value: "*", description: "\"*\"" },
        peg$c135 = "/",
        peg$c136 = { type: "literal", value: "/", description: "\"/\"" },
        peg$c137 = "%",
        peg$c138 = { type: "literal", value: "%", description: "\"%\"" },
        peg$c139 = ">",
        peg$c140 = { type: "literal", value: ">", description: "\">\"" },
        peg$c141 = ">=",
        peg$c142 = { type: "literal", value: ">=", description: "\">=\"" },
        peg$c143 = "<",
        peg$c144 = { type: "literal", value: "<", description: "\"<\"" },
        peg$c145 = "<=",
        peg$c146 = { type: "literal", value: "<=", description: "\"<=\"" },
        peg$c147 = "==",
        peg$c148 = { type: "literal", value: "==", description: "\"==\"" },
        peg$c149 = "!=",
        peg$c150 = { type: "literal", value: "!=", description: "\"!=\"" },
        peg$c151 = "&&",
        peg$c152 = { type: "literal", value: "&&", description: "\"&&\"" },
        peg$c153 = "||",
        peg$c154 = { type: "literal", value: "||", description: "\"||\"" },
        peg$c155 = "(",
        peg$c156 = { type: "literal", value: "(", description: "\"(\"" },
        peg$c157 = ")",
        peg$c158 = { type: "literal", value: ")", description: "\")\"" },
        peg$c159 = "[",
        peg$c160 = { type: "literal", value: "[", description: "\"[\"" },
        peg$c161 = "]",
        peg$c162 = { type: "literal", value: "]", description: "\"]\"" },
        peg$c163 = "NULL",
        peg$c164 = { type: "literal", value: "NULL", description: "\"NULL\"" },
        peg$c165 = "true",
        peg$c166 = { type: "literal", value: "true", description: "\"true\"" },
        peg$c167 = "false",
        peg$c168 = { type: "literal", value: "false", description: "\"false\"" },
        peg$c169 = "=",
        peg$c170 = { type: "literal", value: "=", description: "\"=\"" },
        peg$c171 = "while",
        peg$c172 = { type: "literal", value: "while", description: "\"while\"" },
        peg$c173 = "do",
        peg$c174 = { type: "literal", value: "do", description: "\"do\"" },
        peg$c175 = "done",
        peg$c176 = { type: "literal", value: "done", description: "\"done\"" },
        peg$c177 = "if",
        peg$c178 = { type: "literal", value: "if", description: "\"if\"" },
        peg$c179 = "then",
        peg$c180 = { type: "literal", value: "then", description: "\"then\"" },
        peg$c181 = "else",
        peg$c182 = { type: "literal", value: "else", description: "\"else\"" },
        peg$c183 = "fi",
        peg$c184 = { type: "literal", value: "fi", description: "\"fi\"" },
        peg$c185 = "skip",
        peg$c186 = { type: "literal", value: "skip", description: "\"skip\"" },
        peg$c187 = "read",
        peg$c188 = { type: "literal", value: "read", description: "\"read\"" },
        peg$c189 = "free",
        peg$c190 = { type: "literal", value: "free", description: "\"free\"" },
        peg$c191 = "exit",
        peg$c192 = { type: "literal", value: "exit", description: "\"exit\"" },
        peg$c193 = "print",
        peg$c194 = { type: "literal", value: "print", description: "\"print\"" },
        peg$c195 = "println",
        peg$c196 = { type: "literal", value: "println", description: "\"println\"" },
        peg$c197 = "begin",
        peg$c198 = { type: "literal", value: "begin", description: "\"begin\"" },
        peg$c199 = "end",
        peg$c200 = { type: "literal", value: "end", description: "\"end\"" },
        peg$c201 = ";",
        peg$c202 = { type: "literal", value: ";", description: "\";\"" },

        peg$currPos          = 0,
        peg$savedPos         = 0,
        peg$posDetailsCache  = [{ line: 1, column: 1, seenCR: false }],
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$savedPos, peg$currPos);
    }

    function location() {
      return peg$computeLocation(peg$savedPos, peg$currPos);
    }

    function expected(description) {
      throw peg$buildException(
        null,
        [{ type: "other", description: description }],
        input.substring(peg$savedPos, peg$currPos),
        peg$computeLocation(peg$savedPos, peg$currPos)
      );
    }

    function error(message) {
      throw peg$buildException(
        message,
        null,
        input.substring(peg$savedPos, peg$currPos),
        peg$computeLocation(peg$savedPos, peg$currPos)
      );
    }

    function peg$computePosDetails(pos) {
      var details = peg$posDetailsCache[pos],
          p, ch;

      if (details) {
        return details;
      } else {
        p = pos - 1;
        while (!peg$posDetailsCache[p]) {
          p--;
        }

        details = peg$posDetailsCache[p];
        details = {
          line:   details.line,
          column: details.column,
          seenCR: details.seenCR
        };

        while (p < pos) {
          ch = input.charAt(p);
          if (ch === "\n") {
            if (!details.seenCR) { details.line++; }
            details.column = 1;
            details.seenCR = false;
          } else if (ch === "\r" || ch === "\u2028" || ch === "\u2029") {
            details.line++;
            details.column = 1;
            details.seenCR = true;
          } else {
            details.column++;
            details.seenCR = false;
          }

          p++;
        }

        peg$posDetailsCache[pos] = details;
        return details;
      }
    }

    function peg$computeLocation(startPos, endPos) {
      var startPosDetails = peg$computePosDetails(startPos),
          endPosDetails   = peg$computePosDetails(endPos);

      return {
        start: {
          offset: startPos,
          line:   startPosDetails.line,
          column: startPosDetails.column
        },
        end: {
          offset: endPos,
          line:   endPosDetails.line,
          column: endPosDetails.column
        }
      };
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildException(message, expected, found, location) {
      function cleanupExpected(expected) {
        var i = 1;

        expected.sort(function(a, b) {
          if (a.description < b.description) {
            return -1;
          } else if (a.description > b.description) {
            return 1;
          } else {
            return 0;
          }
        });

        while (i < expected.length) {
          if (expected[i - 1] === expected[i]) {
            expected.splice(i, 1);
          } else {
            i++;
          }
        }
      }

      function buildMessage(expected, found) {
        function stringEscape(s) {
          function hex(ch) { return ch.charCodeAt(0).toString(16).toUpperCase(); }

          return s
            .replace(/\\/g,   '\\\\')
            .replace(/"/g,    '\\"')
            .replace(/\x08/g, '\\b')
            .replace(/\t/g,   '\\t')
            .replace(/\n/g,   '\\n')
            .replace(/\f/g,   '\\f')
            .replace(/\r/g,   '\\r')
            .replace(/[\x00-\x07\x0B\x0E\x0F]/g, function(ch) { return '\\x0' + hex(ch); })
            .replace(/[\x10-\x1F\x80-\xFF]/g,    function(ch) { return '\\x'  + hex(ch); })
            .replace(/[\u0100-\u0FFF]/g,         function(ch) { return '\\u0' + hex(ch); })
            .replace(/[\u1000-\uFFFF]/g,         function(ch) { return '\\u'  + hex(ch); });
        }

        var expectedDescs = new Array(expected.length),
            expectedDesc, foundDesc, i;

        for (i = 0; i < expected.length; i++) {
          expectedDescs[i] = expected[i].description;
        }

        expectedDesc = expected.length > 1
          ? expectedDescs.slice(0, -1).join(", ")
              + " or "
              + expectedDescs[expected.length - 1]
          : expectedDescs[0];

        foundDesc = found ? "\"" + stringEscape(found) + "\"" : "end of input";

        return "Expected " + expectedDesc + " but " + foundDesc + " found.";
      }

      if (expected !== null) {
        cleanupExpected(expected);
      }

      return new peg$SyntaxError(
        message !== null ? message : buildMessage(expected, found),
        expected,
        found,
        location
      );
    }

    function peg$parseProgram() {
      var s0, s1, s2, s3, s4, s5, s6, s7, s8;

      s0 = peg$currPos;
      s1 = peg$parse__();
      if (s1 !== peg$FAILED) {
        s2 = peg$parseBEGIN();
        if (s2 !== peg$FAILED) {
          s3 = peg$parse_();
          if (s3 !== peg$FAILED) {
            s4 = [];
            s5 = peg$parseFunc();
            while (s5 !== peg$FAILED) {
              s4.push(s5);
              s5 = peg$parseFunc();
            }
            if (s4 !== peg$FAILED) {
              s5 = peg$parseStatList();
              if (s5 !== peg$FAILED) {
                s6 = peg$parse_();
                if (s6 !== peg$FAILED) {
                  s7 = peg$parseEND();
                  if (s7 !== peg$FAILED) {
                    s8 = peg$parse__();
                    if (s8 !== peg$FAILED) {
                      peg$savedPos = s0;
                      s1 = peg$c0(s4, s5);
                      s0 = s1;
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseFunc() {
      var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11, s12, s13, s14, s15, s16;

      s0 = peg$currPos;
      s1 = peg$parseType();
      if (s1 !== peg$FAILED) {
        s2 = peg$parse_();
        if (s2 !== peg$FAILED) {
          s3 = peg$parseIdent();
          if (s3 !== peg$FAILED) {
            s4 = peg$parse__();
            if (s4 !== peg$FAILED) {
              s5 = peg$parseLEFT_PAREN();
              if (s5 !== peg$FAILED) {
                s6 = peg$parse__();
                if (s6 !== peg$FAILED) {
                  s7 = peg$parseParamList();
                  if (s7 === peg$FAILED) {
                    s7 = null;
                  }
                  if (s7 !== peg$FAILED) {
                    s8 = peg$parse__();
                    if (s8 !== peg$FAILED) {
                      s9 = peg$parseRIGHT_PAREN();
                      if (s9 !== peg$FAILED) {
                        s10 = peg$parse__();
                        if (s10 !== peg$FAILED) {
                          s11 = peg$parseIS();
                          if (s11 !== peg$FAILED) {
                            s12 = peg$parse__();
                            if (s12 !== peg$FAILED) {
                              s13 = peg$parseStatList();
                              if (s13 !== peg$FAILED) {
                                s14 = peg$parse__();
                                if (s14 !== peg$FAILED) {
                                  s15 = peg$parseEND();
                                  if (s15 !== peg$FAILED) {
                                    s16 = peg$parse_();
                                    if (s16 !== peg$FAILED) {
                                      peg$savedPos = s0;
                                      s1 = peg$c1(s1, s3, s7, s13);
                                      s0 = s1;
                                    } else {
                                      peg$currPos = s0;
                                      s0 = peg$FAILED;
                                    }
                                  } else {
                                    peg$currPos = s0;
                                    s0 = peg$FAILED;
                                  }
                                } else {
                                  peg$currPos = s0;
                                  s0 = peg$FAILED;
                                }
                              } else {
                                peg$currPos = s0;
                                s0 = peg$FAILED;
                              }
                            } else {
                              peg$currPos = s0;
                              s0 = peg$FAILED;
                            }
                          } else {
                            peg$currPos = s0;
                            s0 = peg$FAILED;
                          }
                        } else {
                          peg$currPos = s0;
                          s0 = peg$FAILED;
                        }
                      } else {
                        peg$currPos = s0;
                        s0 = peg$FAILED;
                      }
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseParamList() {
      var s0, s1, s2, s3, s4, s5;

      s0 = peg$currPos;
      s1 = peg$parseParam();
      if (s1 !== peg$FAILED) {
        s2 = peg$parse__();
        if (s2 !== peg$FAILED) {
          s3 = peg$parseCOMMA();
          if (s3 !== peg$FAILED) {
            s4 = peg$parse__();
            if (s4 !== peg$FAILED) {
              s5 = peg$parseParamList();
              if (s5 !== peg$FAILED) {
                peg$savedPos = s0;
                s1 = peg$c2(s1, s5);
                s0 = s1;
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = peg$parseParam();
        if (s1 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c3(s1);
        }
        s0 = s1;
      }

      return s0;
    }

    function peg$parseParam() {
      var s0, s1, s2, s3;

      s0 = peg$currPos;
      s1 = peg$parseType();
      if (s1 !== peg$FAILED) {
        s2 = peg$parse_();
        if (s2 !== peg$FAILED) {
          s3 = peg$parseIdent();
          if (s3 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c4(s1, s3);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseStatList() {
      var s0, s1, s2, s3, s4, s5;
